dropshot/tests/fail/bad_channel1.stderr
error[E0277]: the trait bound `WebsocketUpgrade: RequestContextArgument` is not satisfied
  --> tests/fail/bad_channel1.rs:10:1
   |
10 | / #[channel {
11 | |     protocol = WEBSOCKETS,
12 | |     path = "/test",
13 | | }]
   | |__^ the trait `RequestContextArgument` is not implemented for `WebsocketUpgrade`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)
